--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNJHDr6yBniggzmuaoUTr65",
+      "authorship_tag": "ABX9TyMhZQun3hL5CeBPtljMbUb7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -66,15 +66,6 @@
     },
     {
       "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "3huHOFhgj4Wt"
-      },
-      "execution_count": 19,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
       "source": [
         "from chatterbot import ChatBot\n",
         "from chatterbot.trainers import ListTrainer\n",
@@ -102,9 +93,9 @@
         "    print(\"Chatbot: \",response)\n"
       ],
       "metadata": {
-        "id": "RIuQKjkDpwBA"
+        "id": "3huHOFhgj4Wt"
       },
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -116,7 +107,7 @@
         "from sklearn.metrics import classification_report, confusion_matrix\n",
         "\n",
         "# Load dataset into a pandas dataframe\n",
-        "data = pd.read_csv(\"dataset.csv\")\n",
+        "data = pd.read_csv(\"datasets.csv\")\n",
         "\n",
         "# Split the dataset into training and test sets\n",
         "train_data = data.sample(frac=0.8, random_state=1)\n",
@@ -147,9 +138,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "R_PnppwT2hiK",
-        "outputId": "79085a0f-b933-4384-8c42-88ba865a96f0"
+        "outputId": "01be428f-583c-4ffe-af94-5f4c059412c0"
       },
-      "execution_count": 42,
+      "execution_count": 51,
       "outputs": [
         {
           "output_type": "stream",
@@ -170,6 +161,49 @@
     {
       "cell_type": "code",
       "source": [
+        "import nltk\n",
+        "from nltk.tokenize import word_tokenize\n",
+        "from nltk.corpus import stopwords\n",
+        "from nltk.stem import PorterStemmer\n",
+        "nltk.download('punkt')\n",
+        "nltk.download('stopwords')\n",
+        "import re\n",
+        "\n",
+        "stop_words = set(stopwords.words(\"english\"))\n",
+        "stemmer = PorterStemmer()\n",
+        "\n",
+        "def preprocess_input(input_text):\n",
+        "    input_text = input_text.lower()\n",
+        "    input_text = re.sub(r'[^\\w\\s]','',input_text)\n",
+        "    words = word_tokenize(input_text)\n",
+        "    words = [word for word in words if word not in stop_words]\n",
+        "    words = [stemmer.stem(word) for word in words]\n",
+        "    return \" \".join(words)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-6-zkHdDIO_J",
+        "outputId": "3a763e80-2041-484a-9e0e-c58eaedc5717"
+      },
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
+            "[nltk_data]   Package punkt is already up-to-date!\n",
+            "[nltk_data] Downloading package stopwords to /root/nltk_data...\n",
+            "[nltk_data]   Package stopwords is already up-to-date!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "while True:\n",
         "    user_input = input(\"You: \")\n",
         "    if user_input == \"bye\":\n",
@@ -181,38 +215,26 @@
         "    # Use the model to classify the user's input\n",
         "    prediction = model.predict(user_input_features)\n",
         "    # Check the prediction and return the appropriate response\n",
-        "    if prediction == \"depressed\":\n",
+        "    if prediction == \"suicide\":\n",
         "        response = \"I'm sorry to hear that you're feeling depressed. Is there anything I can do to help?\"\n",
         "    else:\n",
         "        response = \"I'm glad to hear that you're feeling good! How can I assist you today?\"\n",
-        "    print(\"Chatbot: \",response)\n"
+        "    print(\"Chatbot: \",response)"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 252
+          "base_uri": "https://localhost:8080/"
         },
         "id": "pMhFVB4r7ZrR",
-        "outputId": "9f388859-dd79-45b6-e950-7232f8fc6563"
+        "outputId": "acc30b2c-b911-4586-a08c-603da888cdeb"
       },
-      "execution_count": 43,
+      "execution_count": 55,
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "You: hii\n"
-          ]
-        },
-        {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-43-b87e33511963>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m         \u001b[0;32mbreak\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0;31m# Preprocess the user's input\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m     \u001b[0muser_input\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpreprocess_input\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0muser_input\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m     \u001b[0;31m# Convert the user's input into numerical features\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0muser_input_features\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mvectorizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtransform\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0muser_input\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'preprocess_input' is not defined"
+            "You: bye\n"
           ]
         }
       ]
